--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -43,6 +43,15 @@ volume = 5,
 pages = {2247-2252},
 doi = {10.1002/smll.200900635},
 }
+@article{Boekelheide_2016_Artif,
+author = {Z. Boekelheide and C. L. Dennis},
+title = {Artifacts in magnetic measurements of fluid samples},
+journal = {AIP Advances},
+year = 2016,
+volume = 6,
+pages = {085201},
+doi = {10.1063/1.4960457},
+}
 @article{Box_1957_Anoteo,
 author = {G. E. P. Box and Mervin E. Mueller},
 title = {A note on the generation of random normal deviates},
@@ -173,6 +182,15 @@ journal = {Journal of Applied Physics},
 year = 2005,
 pages = {10F306},
 doi = {10.1063/1.1852851},
+}
+@article{Langford_1978_Scher,
+author = {J. I. Langford and A. J. C. Wilson},
+title = {Scherrer after Sixty Years: A Survey and Some New Results in the Determination of Crystallite Size},
+journal = {J. Appl. Cryst.},
+year = 1978,
+volume = 11,
+pages = {102-113},
+doi = {10.1107/S0021889878012844},
 }
 @article{Muscas_2015_Evolu,
 author = {G. Muscas and N. Yaacoub and G. Concas and F. Sayed and R. Sayed Hassan and J.M. Greneche and C. Cannas and A. Musinu and V. Foglietti and S. Casciardi and C. Sangregoria and D. Peddis},
@@ -451,6 +469,13 @@ doi = {10.1021/nl500904a},
 	publisher    = {John Wiley \& Sons, Inc.},
 	date         = {1999},
   edition      = {3}
+}
+@book{Olver_2010_Handb,
+	author       = {Frank W. J. Olver and Daniel W. Lozier and Ronald F. Boisvert and Charles W. Clark},
+	title        = {NIST Handbook of Mathematical Functions},
+	publisher    = {Cambridge University Press},
+	date         = {2010},
+  edition      = {1}
 }
 @book{Sueli_2003_Anint,
 	author       = {Endre S\"uli and David F. Mayers},
