Add shortcut for determinant

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -23,5 +23,6 @@
 \renewcommand{\coth}{\mathrm{coth}}
 \renewcommand{\sinh}{\mathrm{sinh}}
 \renewcommand{\cosh}{\mathrm{cosh}}
+\renewcommand{\det}{\mathrm{det}}
 \newcommand{\sinc}{\mathrm{sinc}}
 \newcommand{\unitmu}{\,\text{\textmu m}}
