Conform to titlepage

--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -1,40 +1,85 @@
 \begin{titlepage}
+
+  % \rmfamily
+\topmargin 5mm
+
 \begin{center}
-{\scshape\LARGE University of Cologne\par}
-\vspace{1cm} % University name
-\textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
-\vspace{.5cm}
-\includegraphics[width=4cm]{Universitaet_zu_Koeln-Siegel}
-% \HRule \\[0.4cm] % Horizontal line
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=4cm]{Universitaet_zu_Koeln-Siegel}
+    \end{figure}
 
-{\huge \bfseries Long Range Order Structures of Magnetic Nanoparticles\par}
-\vspace{0.4cm} % Thesis title
-% \HRule \\[1.5cm] % Horizontal line
+   \LARGE\textbf{Long Range Order Structures of Magnetic Nanoparticles} \\[30mm]
+   \Large{I n a u g u r a l - D i s s e r t a t i o n } \\
+	 \Large{zur}\\
+	 \Large{Erlangung des Doktorgrades}\\
+	\Large{der Mathematisch-Naturwissenschaftliche Fakultät}\\
+	\Large der Universität zu Köln\\[20mm]
+   \Large{vorgelegt von}\\
+   \Large{Dominique Dresen}\\
+	 \Large{aus Köln}\\[30mm]
 
-\begin{minipage}[t]{0.4\textwidth}
-\begin{flushleft} \large
-\centering
-\textit{by}\\
-Dominique Dresen
-\end{flushleft}
-\end{minipage}
-\begin{minipage}[t]{0.4\textwidth}
-\begin{flushright} \large
-\centering
-\textit{Supervisor}\\
-Dr. Sabrina Disch % Supervisor name - remove the \href bracket to remove the link
-\end{flushright}
-\end{minipage}\\[3cm]
 
-\vfill
+%\large  \\
+%\large  Studiengang M. Sc. Chemie\\[10mm]
 
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of Dr. rer. nat.}\\[0.3cm]
-\textit{in the}\\[0.4cm]
-Workgroup Disch\\Department Chemie\\[2cm]
+\begin{table}[h]
+\begin{tabularx}{\textwidth}{X}\hline\end{tabularx}
+\end{table}
 
-\vfill
-
-{\large February 2019}
+\normalsize{Köln, 2019}\\
 \end{center}
-
 \end{titlepage}
+
+\newpage
+\pagenumbering{gobble}
+
+\vspace{100mm}
+\begin{tabular}[t]{ll}
+
+Berichterstatter/in: & Dr. Sabrina Disch\\
+										& Prof. Dr. Sanjay Mathur\\ [25mm]
+\end{tabular}
+
+Tag der letzten mündlichen Prüfung:
+
+
+% %   \begin{center}
+% % {\scshape\LARGE University of Cologne\par}
+% % \vspace{1cm} % University name
+% % \textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
+% % \vspace{.5cm}
+% % \includegraphics[width=4cm]{Universitaet_zu_Koeln-Siegel}
+% % % \HRule \\[0.4cm] % Horizontal line
+
+% % {\huge \bfseries Long Range Order Structures of Magnetic Nanoparticles\par}
+% % \vspace{0.4cm} % Thesis title
+% % % \HRule \\[1.5cm] % Horizontal line
+
+% % \begin{minipage}[t]{0.4\textwidth}
+% % \begin{flushleft} \large
+% % \centering
+% % \textit{by}\\
+% % Dominique Dresen
+% % \end{flushleft}
+% % \end{minipage}
+% % \begin{minipage}[t]{0.4\textwidth}
+% % \begin{flushright} \large
+% % \centering
+% % \textit{Supervisor}\\
+% % Dr. Sabrina Disch % Supervisor name - remove the \href bracket to remove the link
+% % \end{flushright}
+% % \end{minipage}\\[3cm]
+
+% % \vfill
+
+% % \large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of Dr. rer. nat.}\\[0.3cm]
+% % \textit{in the}\\[0.4cm]
+% % Workgroup Disch\\Department Chemie\\[2cm]
+
+% % \vfill
+
+% % {\large February 2019}
+% % \end{center}
+
+% \end{titlepage}
