--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -1,45 +1,52 @@
 \begin{titlepage}
-
-  % \rmfamily
-\topmargin 5mm
-
-\begin{center}
-\begin{figure}[H]
-  \centering
-    \includegraphics[width=4cm]{Universitaet_zu_Koeln-Siegel}
+  \begin{center}
+    \begin{figure}[H]
+      \centering
+      \includegraphics[width=5cm]{Universitaet_zu_Koeln-Siegel}
     \end{figure}
+    \LARGE\textbf{Long Range Order Structures of Magnetic Nanoparticles}
 
-   \LARGE\textbf{Long Range Order Structures of Magnetic Nanoparticles} \\[30mm]
-   \Large{I n a u g u r a l - D i s s e r t a t i o n } \\
-	 \Large{zur}\\
-	 \Large{Erlangung des Doktorgrades}\\
-	\Large{der Mathematisch-Naturwissenschaftliche Fakultät}\\
-	\Large der Universität zu Köln\\[20mm]
-   \Large{vorgelegt von}\\
-   \Large{Dominique Dresen}\\
-	 \Large{aus Köln}\\[30mm]
+    \vspace{2cm}
+
+    \Large{I n a u g u r a l - D i s s e r t a t i o n } \\
+
+    \vspace{2cm}
+
+    \large{zur}\\
+    \large{Erlangung des Doktorgrades}\\
+    \large{der Mathematisch-Naturwissenschaftliche Fakult\"at}\\
+    \large der Universit\"at zu K\"oln\\
+
+    \vspace{2cm}
+
+    \large{vorgelegt von}\\
+    \large{Dominique Dresen}\\
+    \large{aus D\"usseldorf}\\
+
+    \vspace{2cm}
 
 
-%\large  \\
-%\large  Studiengang M. Sc. Chemie\\[10mm]
+    \begin{table}[h]
+    \begin{tabularx}{\textwidth}{X}\hline\end{tabularx}
+    \end{table}
 
-\begin{table}[h]
-\begin{tabularx}{\textwidth}{X}\hline\end{tabularx}
-\end{table}
-
-\normalsize{Köln, 2019}\\
-\end{center}
+    \normalsize{Köln, 2019}\\
+  \end{center}
 \end{titlepage}
 
 \newpage
+
 \pagenumbering{gobble}
 
-\vspace{100mm}
-\begin{tabular}[t]{ll}
+\vspace{2cm}
 
-Berichterstatter/in: & Dr. Sabrina Disch\\
-										& Prof. Dr. Sanjay Mathur\\ [25mm]
+\begin{tabular}{@{}ll}
+  Berichterstatter/in: & Dr. Sabrina Disch \\
+                       & Prof. Dr. Sanjay Mathur
 \end{tabular}
+
+\medskip
+\vspace{2cm}
 
 Tag der letzten mündlichen Prüfung:
 
