Quadrature rule reworked

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -513,6 +513,12 @@ doi = {10.1021/nl500904a},
 	date         = {2004},
   edition      = {84}
 }
+@book{Oliphant_2006_Guide,
+	author       = {Travis E. Oliphant},
+	title        = {Guide to NumPy},
+	date         = {2006},
+  edition      = {1}
+}
 @book{Olver_2010_Handb,
 	author       = {Frank W. J. Olver and Daniel W. Lozier and Ronald F. Boisvert and Charles W. Clark},
 	title        = {NIST Handbook of Mathematical Functions},
