--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -228,6 +228,15 @@ volume = 7,
 pages = {13576-13585},
 doi = {10.1039/c5nr02723c},
 }
+@article{Nevot_1980_Carac,
+author = {L. Névot and P. Croce},
+title = {Caractérisation des surfaces par réflexion rasante de rayons X. Application à l'étude du polissage de quelques verres silicates},
+journal = {Rev. Phys. Appl.},
+year = 1980,
+volume = 15,
+pages = {761-779},
+doi = {10.1051/rphysap:01980001503076100},
+}
 @article{Park_2004_Ultra,
 author = {Jongnam Park and Kwangjin An and Yosun Hwang and Je-Geun Park and Han-Jin Noh and
 Jae-Young Kim and Jae-Hoon Park and Nong-Moon Hwang and Taeghwan Hyeon},
@@ -531,6 +540,12 @@ doi = {10.1021/nl500904a},
 	title        = {An Introduction to Numerical Analysis},
 	publisher    = {Cambridge University Press},
 	date         = {2003}
+}
+@book{Tolan_1999_XRaySc,
+	author       = {Metin Tolan},
+	title        = {X-Ray Scattering from Soft-Matter Thin Films},
+	publisher    = {Springer},
+	date         = {1999}
 }
 @book{Zhu_2005_Moder,
 	author       = {Yimei Zhu},
