Work on reflectometry and gisas theory

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -210,6 +210,15 @@ volume = 11,
 pages = {102-113},
 doi = {10.1107/S0021889878012844},
 }
+@article{Lazzari_2002_Isgis,
+author = {Rémi Lazzari},
+title = {IsGISAXS: a program for gazing-incidence small-angle X-ray scattering analysis of supported islands},
+journal = {J. Appl. Cryst.},
+year = 2002,
+volume = 35,
+pages = {406-421},
+doi = {10.1107/S0021889802006088},
+}
 @article{Marquardt_1963_Analgo,
 author = {Donald W. Marquardt},
 title = {An algorithm for least-squares estimation of nonlinear parameters},
@@ -488,6 +497,12 @@ doi = {10.1021/nl500904a},
 	title        = {Magnetism and Magnetic Materials},
 	publisher    = {Cambridge University Press},
 	date         = {2010}
+}
+@book{Daillant_1999_Xraya,
+	author       = {Jean Daillant and Alain Gibaud},
+	title        = {X-ray and neutron reflectivity},
+	publisher    = {Springer},
+	date         = {1999}
 }
 @book{Einstein_1956_Inves,
 	author       = {Albert Einstein},
