Add float barriers, update gisaxs and saxs method

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -25,5 +25,6 @@
 \renewcommand{\cosh}{\mathrm{cosh}}
 \renewcommand{\det}{\mathrm{det}}
 \renewcommand{\lim}{\mathrm{lim}}
+\renewcommand{\arctan}{\mathrm{arctan}}
 \newcommand{\sinc}{\mathrm{sinc}}
 \newcommand{\unitmu}{\,\text{\textmu m}}
