Add ref and images for gisaxs and saxs

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -7,6 +7,16 @@ volume = 109,
 pages = {111807},
 doi = {10.1103/PhysRevLett.109.111807},
 }
+@article{Ashiotis_2015_Thefa,
+author = {G. Ashiotis and A. Deschildre and Z. Nawaz and J. P. Wright and D. Karkoulis and F. E. Picca and J. Kieffer},
+title = {The fast azimuthal integration Python library: pyFAI},
+journal = {J. Appl. Cryst.},
+year = 2015,
+volume = 48,
+pages = {510-519},
+doi = {10.1107/S1600576715004306},
+}
+Journal of Applied Crystallography (2015) 48 (2), 510-519
 @article{Atxitia_2017_Funda,
 author = {U. Atxitia and D. Hinzke and U. Nowak},
 title = {Fundamentals and applications of the Landau-Lifshitz-Bloch equation},
@@ -201,6 +211,16 @@ year = 2005,
 pages = {10F306},
 doi = {10.1063/1.1852851},
 }
+@article{Knudsen_2013_Fabio,
+author = {Erik B. Knudsen and Henning O. Sørensen and Jonathan P. Wright and Ga\"el Goret and Jérôme Kieffer},
+title = {FabIO: easy access to two-dimensional X-ray detector images in Python},
+journal = {J. Appl. Cryst.},
+year = 1978,
+volume = 46,
+pages = {537-539},
+doi = {10.1107/S0021889813000150},
+}
+46, 537-539
 @article{Langford_1978_Scher,
 author = {J. I. Langford and A. J. C. Wilson},
 title = {Scherrer after Sixty Years: A Survey and Some New Results in the Determination of Crystallite Size},
@@ -574,10 +594,23 @@ doi = {10.1021/nl500904a},
 	howpublished = {\url{http://www.bornagainproject.org}},
 	year = {2018}
 }
+@misc{Dewhurst_2003_Grasp,
+	author = {Charles Dewhurst},
+	title = {Graphical Reduction and Analysis SANS Program for Matlab},
+	howpublished = {\url{https://www.ill.eu/users/support-labs-infrastructure/software-scientific-tools/grasp/}},
+	year = {2017}
+}
 @thesis{Scholz_1999_Micro,
 	author = {Werner Scholz},
 	title = {Micromagnetic Simulation of Thermally Activated Switching in Fine Particles},
 	type = {Diploma Thesis},
 	institution = {TU Wien},
 	year = {1999}
+}
+@thesis{Meyer_2009_Struk,
+	author = {Mathias Meyer},
+	title = {Strukturelle Charakterisierung von Polymer-beschichteten \ch{SiO2}-Nanopartikeln in L\"osung mittels Kleinwinkel-Streuung},
+	type = {Diploma Thesis},
+	institution = {RWTH Aachen},
+	year = {2009}
 }
