More neutron scattering

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -238,6 +238,15 @@ volume = 104,
 pages = {1-4},
 doi = {10.1007/s002570050411},
 }
+@article{Koennecke_2015_Thene,
+author = {M. K\"onnecke and F. A. Akeroyd and H. J. Bernstein and A. S. Brewster and S. I. Campbell and B. Clausen and S. Cottrell and J. U. Hoffmann and P. R. Jemian and D. Männicke and R. Osborn and P. F. Peterson and T. Richter and J. Suzuki and B. Watts and E. Wintersberger and J. Wuttke},
+title = {The NeXus data format},
+journal = {J. Appl. Cryst.},
+year = 2015,
+volume = 48,
+pages = {301-305},
+doi = {10.1107/S1600576714027575},
+}
 @article{Langford_1978_Scher,
 author = {J. I. Langford and A. J. C. Wilson},
 title = {Scherrer after Sixty Years: A Survey and Some New Results in the Determination of Crystallite Size},
@@ -562,6 +571,12 @@ doi = {10.1021/nl500904a},
 	publisher    = {Cambridge University Press},
 	date         = {2010}
 }
+@book{collette_2013_h5py,
+	author = {Andrew Collette},
+	title = {Python and HDF5},
+	publisher = {O'Reilly},
+	date = {2013}
+}
 @book{Daillant_1999_Xraya,
 	author       = {Jean Daillant and Alain Gibaud},
 	title        = {X-ray and neutron reflectivity},
@@ -650,6 +665,13 @@ doi = {10.1021/nl500904a},
 	howpublished = {\url{https://www.ncnr.nist.gov/staff/hammouda/the_sans_toolbox.pdf}},
 	year = {2016}
 }
+@misc{HDF5_1997_Hiera,
+	author = {The HDF Group},
+	title = {Hierarchical Data Format, version 5},
+	howpublished = {\url{http://www.hdfgroup.org/HDF5/}},
+	year = {1997-2018}
+}
+  .
 @thesis{Disch_2010_Thesp,
 	author       = {Sabrina Disch},
 	title        = {The Spin structure of magnetic nanoparticles and in magnetic nanostructures},
