--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -14,6 +14,7 @@
 \newcommand{\unit}[1]{\,\mathrm{#1}}
 \newcommand{\etc}{\textit{etc}}
 \newcommand{\ie}{\textit{i. e.}}
+\newcommand{\eg}{\textit{e. g.}}
 \newcommand{\etal}{\textit{et al.}\,}
 \renewcommand{\sin}{\mathrm{sin}}
 \renewcommand{\cos}{\mathrm{cos}}
