Fix bug on titlepage code

--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -25,11 +25,7 @@
 
     \vspace{2cm}
 
-
-    \begin{table}[ht]
-      \begin{tabularx}{\textwidth}{X}\hline\end{tabularx}
-    \end{table}
-
+    \noindent\rule{14cm}{0.4pt}
     \normalsize{Köln, 2019}\\
   \end{center}
 \end{titlepage}
