Add Bioformats and D22

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -255,6 +255,15 @@ volume = 11,
 pages = {102-113},
 doi = {10.1107/S0021889878012844},
 }
+@article{Linkert_2010_Metad,
+author = {Melissa Linkert and Curtis T. Rueden and Chris Allan and Jean-Marie Burel and Will Moore and Andrew Patterson and Brian Loranger and Josh Moore and Carlos Neves and Donald MacDonald and Aleksandra Tarkowska and Caitlin Sticco and Emma Hill and Mike Rossner and Kevin W. Eliceiri and and Jason R. Swedlow},
+title = {Metadata matters: access to image data in the real world},
+journal = {The Journal of Cell Biology},
+year = 2010,
+volume = 189,
+pages = {777-782},
+doi = {10.1083/jcb.201004104},
+}
 @article{Lazzari_2002_Isgis,
 author = {Rémi Lazzari},
 title = {IsGISAXS: a program for gazing-incidence small-angle X-ray scattering analysis of supported islands},
@@ -428,6 +437,15 @@ volume = 187,
 pages = {747-757},
 doi = {10.1103/PhysRev.187.747},
 }
+@article{Schindelin_2012_Fijia,
+author = {Johannes Schindelin and Ignacio Arganda-Carreras and Erwin Frise and Verena Kaynig and Mark Longair and Tobias Pietzsch and Stephan Preibisch and Curtis Rueden and Stephan Saalfeld and Benjamin Schmid and Jean-Yves Tinevez and Daniel James White and Volker Hartenstein and Kevin Eliceiri and Pavel Tomancak and Albert Cardona},
+title = {Fiji: an open-source platform for biological-image analysis},
+journal = {Nature Methods},
+year = 2012,
+volume = 9,
+pages = {676-571},
+doi = {10.1038/nmeth.2019},
+}
 @article{Sears_1992_Neutr,
 author = {Varley F. Sears},
 title = {Neutron scattering lengths and cross sections},
@@ -483,6 +501,15 @@ year = 1960,
 volume = 23,
 pages = {1055-1071},
 doi = {10.1143/PTP.23.1055},
+}
+@article{Toby_2006_Rfact,
+author = {Brian H. Toby},
+title = {R factors in Rietveld analysis: How good is good enough?},
+journal = {Powder Diffr. PODIE2},
+year = 2006,
+volume = 21,
+pages = {67-70},
+doi = {10.1154/1.2179804},
 }
 @article{Torquato_2000_IsRan,
 author = {S. Torquato and T. M. Truskett and P. G. Debenedetti},
@@ -670,7 +697,12 @@ doi = {10.1021/nl500904a},
 	howpublished = {\url{http://www.hdfgroup.org/HDF5/}},
 	year = {1997-2018}
 }
-  .
+@misc{Porcar_2018_D22La,
+	author = {Lionel Porcar},
+	title = {D22 - Large dynamic range small-angle diffractometer},
+	howpublished = {\url{https://www.ill.eu/users/instruments/instruments-list/d22/characteristics/}},
+	year = {2018}
+}
 @thesis{Disch_2010_Thesp,
 	author       = {Sabrina Disch},
 	title        = {The Spin structure of magnetic nanoparticles and in magnetic nanostructures},
