--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -25,7 +25,7 @@
 
     \vspace{2cm}
 
-    \noindent\rule{14cm}{0.4pt}
+    \noindent\rule{14cm}{0.4pt}\\
     \normalsize{Köln, 2019}\\
   \end{center}
 \end{titlepage}
