Increase depth for section and toc, add paragraphNewLine

--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -31,3 +31,4 @@
 \newcommand{\sinc}{\mathrm{sinc}}
 \newcommand{\unitmu}{\,\text{\textmu m}}
 \newcommand{\musf}{\text{\textmu}}
+\newcommand{\paragraphNewLine}[1]{\paragraph{#1}\mbox{}\\}
