Add experimental methods to glossary

--- a/components/glossary/glossary.tex
+++ b/components/glossary/glossary.tex
@@ -1,4 +1,59 @@
+%math abbreviations
 \newglossaryentry{vector}{%
   name={\ensuremath{\vec{a} ,\, a ,\, \hat{a}}},
   description={Notation for a three dim. vector \ensuremath{\vec{a}}, it's magnitude \ensuremath{a} and direction with magnitude 1 such that \ensuremath{\hat{a} = \vec{a}/a}}
+}
+
+%exp. Methods
+\newglossaryentry{SAXS}{
+  name={SAXS},
+  description={Small-Angle X-ray Scattering}
+}
+\newglossaryentry{SANS}{
+  name={SANS},
+  description={Small-Angle Neutron Scattering}
+}
+\newglossaryentry{SANSPOL}{
+  name={SANSPOL},
+  description={Small-Angle Scattering with Polarized Neutrons}
+}
+\newglossaryentry{GISAXS}{
+  name={GISAXS},
+  description={Grazing-Incidence Small-Angle X-ray Scattering}
+}
+\newglossaryentry{GISANS}{
+  name={GISANS},
+  description={Grazing-Incidence Small-Angle Neutron Scattering}
+}
+\newglossaryentry{polGISANS}{
+  name={polGISANS},
+  description={Grazing-Incidence Small-Angle Scattering with Polarized Neutrons}
+}
+\newglossaryentry{NR}{
+  name={NR},
+  description={Neutron Reflectometry}
+}
+\newglossaryentry{PNR}{
+  name={PNR},
+  description={Polarized Neutron Reflectometry}
+}
+\newglossaryentry{SEM}{
+  name={SEM},
+  description={Scanning Electron Microscopy}
+}
+\newglossaryentry{TEM}{
+  name={TEM},
+  description={Transmission Electron Microscopy}
+}
+\newglossaryentry{XRD}{
+  name={XRD},
+  description={X-Ray Diffraction}
+}
+\newglossaryentry{XRR}{
+  name={SAXS},
+  description={X-ray Reflectometry}
+}
+\newglossaryentry{VSM}{
+  name={VSM},
+  description={Vibrating Sample Magnetometry}
 }
