Write a bit of state of the art on monolayers

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -1,3 +1,12 @@
+@article{Agthe_2013_Dynam,
+author = {Michael Agthe and Erik Wetterskog and Johanne Mouzon and German Salazar-Alvarez and Lennart Bergstr\"om},
+title = {Dynamic growth modes of ordered arrays and mesocrystals during drop-casting of iron oxide nanocubes},
+journal = {CrystEngComm},
+year = 2014,
+volume = 16,
+pages = {1443-1450},
+doi = {10.1039/C3CE41871E},
+}
 @article{Aoyama_2012_Tenth,
 author = {Tatsumi Aoyama and Masashi Hayakawa and Toichiro Kinoshita and Makiko Nio},
 title = {Tenth-Order QED Contribution to the Electron g-2 and an Improved Value of the Fine Structure Constant},
@@ -51,6 +60,15 @@ year = 2009,
 volume = 5,
 pages = {2247-2252},
 doi = {10.1002/smll.200900635},
+}
+@article{Bodnarchuk_2010_Excha,
+author = {Maryna I. Bodnarchuk and Maksym V. Kovalenko and Stefan Pichler and Gerhard Fritz-Popovski and G\"unter Hesser and Wolfgang Heiss},
+title = {Large-Area Ordered Superlattices from Magnetic W\"ustite/Cobalt Ferrite Core/Shell Nanocrystals by Doctor Blade Casting},
+journal = {ACS Nano},
+year = 2010,
+volume = 4,
+pages = {423-431},
+doi = {10.1021/nn901284f},
 }
 @article{Boekelheide_2016_Artif,
 author = {Z. Boekelheide and C. L. Dennis},
@@ -203,6 +221,14 @@ year = 2015,
 pages = {1-4},
 doi = {10.17815/jlsrf-1-29},
 }
+@article{Heitsch_2010_Gisax,
+author = {Andrew T. Heitsch and Reken N. Patel and Brian W. Goodfellow and Detlef-M. Smilgies and Brian A. Korgel},
+title = {GISAXS Characterization of Order in Hexagonal Monolayers of FePt Nanocrystals},
+journal = {J. Phys. Chem. C},
+year = 2010,
+pages = {14427-14432},
+doi = {10.1021/jp1047979},
+}
 @article{Hyeon_2003_Chemi,
 author = {Thaeghwan Hyeon},
 title = {Chemical synthesis of magnetic nanoparticles},
@@ -218,6 +244,15 @@ journal = {Journal of Applied Physics},
 year = 2005,
 pages = {10F306},
 doi = {10.1063/1.1852851},
+}
+@article{Kim_2002_Multi,
+author = {H. S. Kim and B. H. Sohn and W. Lee and J.-K. Lee and S. J. Choi and S. J. Kwon},
+title = {Multifunctional layer-by-layer self-assemlby of conducting polymers and magnetics nanoparticles},
+journal = {Thin Solid Films},
+year = 2002,
+volume = 419,
+pages = {173-177},
+doi = {10.1016/S0040-6090(02)00779-4},
 }
 @article{Knudsen_2013_Fabio,
 author = {Erik B. Knudsen and Henning O. Sørensen and Jonathan P. Wright and Ga\"el Goret and Jérôme Kieffer},
@@ -291,6 +326,15 @@ volume = 38,
 pages = {979-987},
 doi = {10.1107/S0021889805031584},
 }
+@article{Mishra_2012_Selfa,
+author = {D. Mishra and M. J. Benitez and O. Petracic and G. A. Badini Confalonieri and P. Szary and F. Br\"ussing and K. Theis-Br\"ohl and A. Devishvili and A. Vorobiev and O. Konovalov},
+title = {Self-assembled iron oxide nanoparticle multilayer: x-ray and polarized neutron reflectivity},
+journal = {Nanotechnology},
+year = 2012,
+volume = 23,
+pages = {055707},
+doi = {10.1088/0957-4484/23/5/055707},
+}
 @article{Muscas_2015_Evolu,
 author = {G. Muscas and N. Yaacoub and G. Concas and F. Sayed and R. Sayed Hassan and J.M. Greneche and C. Cannas and A. Musinu and V. Foglietti and S. Casciardi and C. Sangregoria and D. Peddis},
 title = {Evolution of the magnetic structure with chemical composition in spinel iron oxide nanoparticles},
@@ -327,6 +371,15 @@ year = 2016,
 volume = 71,
 pages = {272-365},
 doi = {10.1016/j.surfrep.2016.02.001},
+}
+@article{Pauly_2011_Monol,
+author = {Matthias Pauly and Benoit P. Pichon and Pierre-Antoine Albouy and Solenne Fleutot and Cedric Leuvrey and Morgan Trassin and Jean-Louis Gallani and Sylvie Begin-Colin},
+title = {Monolayer and multilayer assemblies of spherically and cubic-shaped iron oxide nanoparticles},
+journal = {J. Mater. Chem.},
+year = 2011,
+volume = 21,
+pages = {16018},
+doi = {10.1039/c1jm12012c},
 }
 @article{Peddis_2008_Spinc,
 author = {D. Peddis and M. V. Mansilla and S. Morup and C. Cannas and A. Musinu and G. Piccaluga and F. D'Orazio and F. Lucari and D. Fiorani},
@@ -530,6 +583,15 @@ volume = 372,
 pages = {122-127},
 doi = {10.1007/s00216-001-1132-7},
 }
+@article{Ukleev_2017_Selfa,
+author = {V. Ukleev and A. Khassanov and I. Snigireva and O. Konovalov and M. Dudnik and I. Dubitskiy and A. Vorobiev},
+title = {Self-assembly of a binary mixture of iron oxide nanoparticles in Langmuir film: X-ray scattering study},
+journal = {Materials Chemistry and Physics},
+year = 2017,
+volume = 202,
+pages = {31-39},
+doi = {10.1016/j.matchemphys.2017.08.069},
+}
 @article{Varon_2013_Dipol,
 author = {M. Varon and M. Beleggia and T. Kasama and R. J. Harrison and R. E. Dunin-Borkowski and V. F. Puntes and C. Frandsen},
 title = {Dipolar Magnetism in Ordered and Disordered Low-Dimensional Nanoparticle Assemblies},
@@ -539,6 +601,25 @@ volume = 3,
 number = 1234,
 pages = {1-5},
 doi = {10.1038/srep01234},
+}
+@article{Vorobiev_2015_Subst,
+author = {A. Vorobiev and A. Khassanov and V. Ukleev and I. Snigireva and O. Konovalov},
+title = {Substantial Difference in Ordering of 10, 15, and 20 nm Iron Oxide Nanoparticles on a Water Surface: In Situ Characterization by the Grazing Incidence X-Ray Scattering},
+journal = {Langmuir},
+year = 2015,
+volume = 31,
+pages = {11639-11648},
+doi = {10.1021/acs.langmuir.5b02644},
+}
+@article{Wen_2011_Ultral,
+author = {Tianlong Wen and Sara A. Majetich},
+title = {Ultra-Large-Area Self-Assembled Monolayers of Nanoparticles},
+journal = {ACS Nano},
+year = 2011,
+volume = 11,
+number = 5,
+pages = {8868-8876},
+doi = {10.1021/nn2037048},
 }
 @article{Wetterskog_2014_Preci,
 author = {Erik Wetterskog and Michael Agthe and Arnaud Mayence and Jekabs Grins and Dong Wang and Subhasis Rana and Anwar Ahniyaz and German Salazar-Alvarez and Lennart Bergstr\"om},
