Extend literature introduction

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -7,6 +7,15 @@ volume = 16,
 pages = {1443-1450},
 doi = {10.1039/C3CE41871E},
 }
+@article{Angotzi_2017_Spine,
+author = {Marco Sanna Angotzi and Anna Musinu and Valentina Mameli and Andrea Ardu and Claudio Cara and Daniel Niznansky and Huolin L. Xin and Carla Cannas},
+title = {Spinel Ferrite Core–Shell Nanostructures by a Versatile Solvothermal Seed-Mediated Growth Approach and Study of Their Nanointerfaces},
+journal = {ACS Nano},
+year = 2017,
+volume = 11,
+pages = {7889-7900},
+doi = {10.1021/acsnano.7b02349},
+}
 @article{Aoyama_2012_Tenth,
 author = {Tatsumi Aoyama and Masashi Hayakawa and Toichiro Kinoshita and Makiko Nio},
 title = {Tenth-Order QED Contribution to the Electron g-2 and an Improved Value of the Fine Structure Constant},
@@ -61,7 +70,7 @@ volume = 5,
 pages = {2247-2252},
 doi = {10.1002/smll.200900635},
 }
-@article{Bodnarchuk_2010_Excha,
+@article{Bodnarchuk_2010_Large,
 author = {Maryna I. Bodnarchuk and Maksym V. Kovalenko and Stefan Pichler and Gerhard Fritz-Popovski and G\"unter Hesser and Wolfgang Heiss},
 title = {Large-Area Ordered Superlattices from Magnetic W\"ustite/Cobalt Ferrite Core/Shell Nanocrystals by Doctor Blade Casting},
 journal = {ACS Nano},
@@ -150,6 +159,14 @@ year = 2000,
 volume = 33,
 doi = {10.1088/0022-3727/33/15/201},
 }
+@article{Figuera_2015_Moess,
+author = {Juan de la Figuera and Adrián Quesada and Laura Martín-García and Mikel Sanz and Mohamed Oujja and Marta Castillejo and Arantzazu Mascaraque and Alpha T. N’Diaye and Michael Foerster and Lucía Aballe and José F. Marco1},
+title = {M\"ossbauer and Magnetic Properties of Coherently Mixed Magnetite-Cobalt Ferrite Grown by Infrared Pulsed-Laser Deposition},
+journal = {Croat. Chem. Acta},
+year = 2015,
+volume = 88,
+doi = {10.5562/cca2752},
+}
 @article{FZJ_2016_GALAX,
 author = {Forschungszentrum J\"ulich},
 title = {GALAXI: Gallium anode low-angle x-ray instrument},
@@ -203,6 +220,15 @@ year = 2018,
 volume = 51,
 pages = {1-10},
 doi = {10.1107/S160057671800448X},
+}
+@article{Hai_2010_Sizec,
+author = {Hoang Tri Hai and Hai Tao Yang and Hiroaki Kura and Daiji Hasegawa and Yasunobu Ogata and Migaku Takahashi and Tomoyuki Ogawa},
+title = {Size control and characterization of wustite (core)/spinel (shell) nanocubes obtained by decomposition of iron oleate complex},
+journal = {Journal of Colloid and Interface Science},
+year = 2010,
+volume = 346,
+pages = {37-42},
+doi = {10.1016/j.jcis.2010.02.025},
 }
 @article{Hanneke_2011_Cavit,
 author = {D. Hanneke and S. Fogwell Hoogerheide and G. Gabrielse},
@@ -290,6 +316,15 @@ volume = 11,
 pages = {102-113},
 doi = {10.1107/S0021889878012844},
 }
+@article{Lazzari_2002_Isgis,
+author = {Rémi Lazzari},
+title = {IsGISAXS: a program for gazing-incidence small-angle X-ray scattering analysis of supported islands},
+journal = {J. Appl. Cryst.},
+year = 2002,
+volume = 35,
+pages = {406-421},
+doi = {10.1107/S0021889802006088},
+}
 @article{Linkert_2010_Metad,
 author = {Melissa Linkert and Curtis T. Rueden and Chris Allan and Jean-Marie Burel and Will Moore and Andrew Patterson and Brian Loranger and Josh Moore and Carlos Neves and Donald MacDonald and Aleksandra Tarkowska and Caitlin Sticco and Emma Hill and Mike Rossner and Kevin W. Eliceiri and and Jason R. Swedlow},
 title = {Metadata matters: access to image data in the real world},
@@ -299,14 +334,14 @@ volume = 189,
 pages = {777-782},
 doi = {10.1083/jcb.201004104},
 }
-@article{Lazzari_2002_Isgis,
-author = {Rémi Lazzari},
-title = {IsGISAXS: a program for gazing-incidence small-angle X-ray scattering analysis of supported islands},
-journal = {J. Appl. Cryst.},
-year = 2002,
-volume = 35,
-pages = {406-421},
-doi = {10.1107/S0021889802006088},
+@article{Lu_2015_Synth,
+author = {Le T. Lu and Ngo T. Dung and Le D. Tung and Cao T. Thanh and Ong K. Quy and Nguyen V. Chuc and Shinya Maenosono and Nguyen T. K. Thanh},
+title = {Synthesis of magnetic cobalt ferrite nanoparticles with controlled morphology, monodispersity and composition: the influence of solvent, surfactant, reductant and synthetic conditions},
+journal = {Nanoscale},
+year = 2015,
+volume = 7,
+pages = {19596},
+doi = {10.1039/c5nr04266f},
 }
 @article{Marquardt_1963_Analgo,
 author = {Donald W. Marquardt},
@@ -399,6 +434,15 @@ volume = 23,
 pages = {321-333},
 doi = {10.1107/S0021889890003946},
 }
+@article{Pianciola_2014_Sizea,
+author = {Betiana N. Pianciola and Enio Lima Jr. and Horacio E. Troiani and Luiz C.C.M. Nagamine and R. Cohen and Roberto D. Zysler},
+title = {Size and surface effects in the magnetic order of \ch{CoFe2O4} nanoparticles},
+journal = {Journal of Magnetism and Magnetic Materials},
+year = 2014,
+volume = 377,
+pages = {44-51},
+doi = {10.1016/j.jmmm.2014.10.054},
+}
 @article{Pillai_1996_Synth,
 author = {V. Pillai and D. O. Shah},
 title = {Synthesis of high-coercivity cobalt ferrite particles using water-in-oil microemulsions},
@@ -471,6 +515,15 @@ year = 2018,
 volume = 51,
 pages = {249-256},
 doi = {10.1107/S160057671800239X},
+}
+@article{Sathya_2016_Cofeo,
+author = {Ayyapan Sathya and Pablo Guardia and Rosaria Brescia and Niccolò Silvestri and Giammarino Pugliese and Simone Nitti and Liberato Manna and Teresa Pellegrino },
+title = {\ch{Co_x Fe_{3-x} O_4} Nanocubes for Theranostic Applications: Effect of Cobalt Content and Particle Size},
+journal = {Chem. Mater.},
+year = 2016,
+volume = 28,
+pages = {1769-1780},
+doi = {10.1021/acs.chemmater.5b04780},
 }
 @article{Sawatzky_1968_Catio,
 author = {G. A. Sawatzky and F. van der Woude and A. H. Morrish},
@@ -658,6 +711,15 @@ year = 2014,
 volume = 14,
 pages = {3395-3399},
 doi = {10.1021/nl500904a},
+}
+@article{Yu_2013_Cobal,
+author = {Yongsheng Yu and Adriana Mendoza-Garcia and Bo Ning and Shouheng Sun},
+title = {Cobalt-Substituted Magnetite Nanoparticles and Their Assembly into Ferrimagnetic Nanoparticle Arrays},
+journal = {Adv. Mater.},
+year = 2013,
+volume = 25,
+pages = {3090-3094},
+doi = {10.1002/adma.201300595},
 }
 @book{AlsNielsen_2011_Eleme,
 	author       = {Jens Als-Nielsen and Des McMorrow},
