Restructure and write XRD and EDX

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -255,6 +255,14 @@ year = 2010,
 pages = {14427-14432},
 doi = {10.1021/jp1047979},
 }
+@article{Hentschel_1970_Stoich,
+author = {Bernhard Hentschel},
+title = {Stoichiometric FeO as Metastable Intermediate of the Decomposition of Wustite at 225^\circ C },
+journal = {Zeitschrift f. Naturforschung A},
+year = 2010,
+pages = {1996-1997},
+doi = {10.1515/zna-1970-1241},
+}
 @article{Hyeon_2003_Chemi,
 author = {Thaeghwan Hyeon},
 title = {Chemical synthesis of magnetic nanoparticles},
@@ -270,6 +278,15 @@ journal = {Journal of Applied Physics},
 year = 2005,
 pages = {10F306},
 doi = {10.1063/1.1852851},
+}
+@article{Kannan_1987_Perco,
+author = {R. Kannan and Mohindar S. Seehra},
+title = {Percolation effects and magnetic properties of the randomly diluted fcc system \ch{Co_p Mg_{1-p} O}},
+journal = {Physical Review B},
+year = 1987,
+volume = 35,
+pages = {6847-6853},
+doi = {10.1103/PhysRevB.35.6847},
 }
 @article{Kim_2002_Multi,
 author = {H. S. Kim and B. H. Sohn and W. Lee and J.-K. Lee and S. J. Choi and S. J. Kwon},
@@ -589,6 +606,15 @@ year = 1958,
 volume = 110,
 pages = {1341-1348},
 doi = {10.1103/PhysRev.110.1341},
+}
+@article{Stein_2018_Struct,
+author = {C. R. Stein and M. T. S. Bezerra and G. H. A. Holanda and J. André-Filho and P. C. Morais},
+title = {Structural and magnetic properties of cobalt ferrite nanoparticles synthesized by co-precipitation at increasing temperatures},
+journal = {AIP Advances},
+year = 2018,
+volume = 8,
+pages = {056303},
+doi = {10.1063/1.5006321},
 }
 @article{Sun_2002_SizeC,
 author = {Shouheng Sun and Hao Zeng},
