Rework on EDX and SAXS

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -842,6 +842,12 @@ doi = {10.1002/adma.201300595},
 	publisher    = {Kluwer Academic Publishers},
 	date         = {2005}
 }
+@misc{BerkeleyLab_1993_asf,
+	author = {Berkeley Lab},
+	title = {Atomic Scattering Factor Files},
+	howpublished = {\url{http://henke.lbl.gov/optical_constants/asf.html}},
+	year = {1993 -- 2018}
+}
 @misc{Burle_2018_borna,
 	author = {J. Burle and C. Durniak and J. M. Fisher and M. Ganeva and G. Pospelov and W. Van Herck and J. Wuttke and D. Yurov},
 	title = {BornAgain - Software for simulating and fitting X-ray and neutron small-angle scattering at grazing incidence},
