Work on SANS 1/3

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -133,6 +133,15 @@ volume = 49,
 pages = {1-14},
 doi = {10.1107/S1600576715021792},
 }
+@article{Disch_2012_Quant,
+author = {S. Disch and E. Wetterskog and R. P. Hermann and A. Wiedenmann and U. Vainio and G. Salazar-Alvarez and L. Bergstr\"om and Th. Br\"uckel},
+title = {Quantitative spatial magnetization distribution in iron oxide nanocubes and nanospheres by polarized small-angle neutron scattering},
+journal = {New Journal of Physics},
+year = 2012,
+volume = 14,
+pages = {013025},
+doi = {10.1088/1367-2630/14/1/013025},
+}
 @article{Embden_2015_TheHe,
 author = {Joel van Embden and Anthony S. R. Chesman and Jacek J. Jasieniak},
 title = {The Heat-Up Synthesis of Colloidal Nanocrystals},
