Work on PNR of CC

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -706,6 +706,15 @@ volume = 92,
 pages = {621-626},
 doi = {10.1007/s00339-008-4547-6},
 }
+@article{Shimrat_1962_Algor,
+author = {M. Shimrat},
+title = {Algorithm 112: Position of point relative to polygon},
+journal = {Comm. ACM},
+year = 1962,
+volume = 5,
+pages = {434},
+doi = {10.1145/368637.368653},
+}
 @article{Slonczewski_1958_Origi,
 author = {J. C. Slonczewski},
 title = {Origin of Magnetic Anisotropy in Cobalt-Substituted Magnetite},
