--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -52,6 +52,15 @@ volume = 21,
 pages = {3458-3468},
 doi = {10.1021/cm901033m},
 }
+@article{Bickford_1957_Magne,
+author = {L. R. Bickford and J. M. Brownlow and R. F. Penoyer},
+title = {Magnetocrystalline anisotropy in cobalt-substituted magnetite single crystals},
+journal = {Proc. IEEE},
+year = 1956,
+volume = 104,
+pages = {238},
+doi = {10.1049/pi-b-1.1957.0038},
+}
 @article{Bigioni_2006_Kinet,
 author = {Terry P. Bigioni and Xiao-Min Lin and Toan T. Nguyen and Eric I. Corwin and Thomas A. Witten and Heinrich M. Jaeger},
 title = {Kinetically driven self assembly of highly ordered nanoparticle monolayers},
@@ -239,6 +248,16 @@ volume = 49,
 pages = {642-648},
 doi = {10.1107/S0108767392013126},
 }
+@article{Goya_2003_Stati,
+author = {G. F. Goya and T. S. Berquo and F. C. Fonseca and M. P. Morales},
+title = {Static and dynamic magnetic properties of spherical magnetite nanoparticles},
+journal = {J. Appl. Phys.},
+year = 2003,
+volume = 94,
+pages = {3520-},
+doi = {10.1063/1.1599959},
+}
+
 @article{Grzelczak_2010_direc,
 author = {Marek Grzelczak and Jan Vermant and Eric M. Furst and Luis M. Liz-Marán},
 title = {Directed Self-Assembly of Nanoparticles},
@@ -431,6 +450,24 @@ year = 1963,
 volume = 11,
 pages = {431-441},
 doi = {10.1137/0111030},
+}
+@article{Mazozuluaga_2007_Surfa,
+author = {J. Mazo-Zuluaga and J. Restrepo and J. Mejia-Lopez},
+title = {Surface anisotropy of a \ch{Fe3O4} nanoparticle: A simulation approach},
+journal = {Physica B},
+year = 2007,
+volume = 398,
+pages = {187-190},
+doi = {10.1016/j.physb.2007.04.070},
+}
+@article{Medrano_1999_Domai,
+author = {C. Medrano and M. Schlenker and J. Espeso and Y. Miyamoto},
+title = {Domains in the low-temperature phase of magnetite from synchrotron-radiation x-ray topographs},
+journal = {Physical Review B},
+year = 1999,
+volume = 59,
+pages = {1185-1195},
+doi = {10.1103/PhysRevB.59.1185},
 }
 @article{Mildner_2005_Arefr,
 author = {D. F. R. Mildner and B. Hammouda and S. R. Kline},
